# dotfiles

./: .aider.chat.history.md  .aider.input.history  .gitattributes  .gitignore  .gitmodules  .pdm-python  .stow-local-ignore  Raycast.rayconfig  RectangleConfig.json  fibonacci.py  install.conf.yaml  install.sh  install_dnf.sh  iterm2_Profiles.json  justfile  packages  plugins.lua  pyproject.toml  raycast.rayconfig  tmux.conf  tools  vimrc
.aider.tags.cache.v4/: cache.db
.wrangler/: metrics.json
ansible/: README.md  acu_rhel8.yml  macos.yml  rpi.yml  ubuntu-arm64.yml  ubuntu.yml
brew/: Brewfile.common  Brewfile.personal  Brewfile.red6
claude/: .stow-local-ignore  CLAUDE.md
configstore/: firebase-tools.json  update-notifier-firebase-tools.json
direnv/: direnvrc
git/: config
github-copilot/: apps.json
gnome/: kitty.desktop  ulauncher.desktop
iterm/: com.googlecode.iterm2.plist
iterm2/: Makefile  README.md  prof.py  pyproject.toml  test-encryption
karabiner/: karabiner.json
kitty/: kitty.conf  kitty.conf.bak  pyproject.toml  remotes.py  ssh.conf
lnav/: log_metadata.db  textinput-history.db  view-info-e149f1e0c6b1eb3cb032f555fe88eb05.ts1747201406.ppid97851.json  view-info-e149f1e0c6b1eb3cb032f555fe88eb05.ts1747409919.ppid27903.json  view-info-e149f1e0c6b1eb3cb032f555fe88eb05.ts1747409928.ppid27903.json  view-info-e8062da66190e7992a7864a7bf32dd03.ts1747200790.ppid86872.json  view-info-e8062da66190e7992a7864a7bf32dd03.ts1747201068.ppid86872.json  view-info-e8062da66190e7992a7864a7bf32dd03.ts1747201165.ppid86872.json  view-info-e8062da66190e7992a7864a7bf32dd03.ts1747201368.ppid86872.json
marimo/: marimo.toml
ngrok/: ngrok.yml
nushell/: config.nu  custom.nu  env.nu  history.txt
op/: config
(+174 files in other folders)
