[project]
name = "iterm2"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "egradman", email = "eric@gradman.com"},
]
dependencies = [
    "iterm2>=2.7",
    "pydantic>=2.8.0",
    "webcolors>=24.6.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
