[project]
name = "kitty"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "egradman", email = "eric@gradman.com"},
    {name = "eric.gradman", email = "eric.gradman@red6ar.com"},
]
dependencies = [
    "pydantic>=2.9.2",
    "webcolors>=24.8.0",
    "uuid>=1.30",
    "jinja2>=3.1.4",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
